--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <div class="container mt-5">
+<body style="background-color: rgb(124, 202, 138);">
+  <div class="container mt-1">
     <app-root></app-root>
   </div>
 </body>
